Fix SWA header on Safari
Removed unnecessary absolute positioning to allow flexbox to work properly on Safari for OSX.

--- a/src/css/swa/content.less
+++ b/src/css/swa/content.less
@@ -32,7 +32,7 @@ img {
 	
 	background-position: center center;
 	background-repeat: no-repeat;
-    background-size: cover;
+	background-size: cover;
 	
 	display: flex;
 	justify-content: center;
@@ -41,8 +41,8 @@ img {
 	.shader-overlay {
 		background-image: url(../../images/shader.png);
 		position: absolute;
-		left: 0px;
-		top: 0px;
+		left: 0;
+		top: 0;
 		width: 100%;
 		height: 100%;
 		z-index: 0;
@@ -50,9 +50,7 @@ img {
 	}
 	
 	img {
-		position: absolute;
-		left: 0;
-		right: 0;
+		position: relative;
 		margin: 0 auto;
 		width: 70vmin;
 		z-index: 100;
